feat: search clients lexically
